@@ -1,10 +1,7 @@
 [Webhost]
-;ControlPort=6352
+ControlPort=6352
 NetworkInterface1=eth0
 NtpConfigurationFile=/etc/ntp.conf
 NtpServiceName=ntpd
 ServiceCommand=/usr/bin/glassplayerhost
 ServiceRespawnDelay=100
-
-;[Platform]
-;KeyDevice=/dev/sda
