@@ -34,3 +34,6 @@
 	* Incremented the package version to 0.5.1.
 2016-01-27 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented firmware updates via the web interface.
+2016-01-27 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed an HTML validation error in 'src/web/systempage.cpp'.
+	* Incremented the webhost version to 0.8.4.
